--- a/_posts/2018-08-26-HELP.md
+++ b/_posts/2018-08-26-HELP.md
@@ -1,8 +1,12 @@
 ---
-layout : archive
+layout : article
 title:  "Help Me"
 date:   2018-08-26 12:53:13 -0400
 categories: jekyll update
+image:
+  teaser: logo.jpg
+  feature: logo.jpg
+  credit: Michael Rose #name of the person or site you want to credit
 ---
 
 I am new here and would like to tell the world about it. 
